Fix java 8 build